src/test/ui/suggestions/pub-ident-fn.stderr
error: missing `fn` for method definition
  --> $DIR/pub-ident-fn.rs:13:4
   |
LL | pub   foo(_s: usize) -> bool { true }
   |    ^^^
help: add `fn` here to parse `foo` as a public method
   |
LL | pub fn foo(_s: usize) -> bool { true }
   |     ^^

error: aborting due to previous error

